# loklang-rs

./: .gitignore  Cargo.toml  README.md  build.rs  config.example.ini  diesel.toml
client/: README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js
client/src/: app.html
client/src/lib/: types.js  utils.js
client/src/lib/components/layout/: LyricsPanel.svelte  Player.svelte  Sidebar.svelte  TrackInfoPanel.svelte
client/src/lib/components/ui/: IconButton.svelte  Slider.svelte
client/src/lib/stores/: LayoutData.svelte.js  playerState.svelte.js  playlistData.svelte.js
client/src/routes/: +layout.svelte  +page.js  +page.svelte
client/src/routes/albums/: +page.js  +page.svelte
client/src/routes/albums/[albumId]/: +page.js  +page.svelte
client/src/routes/artists/: +page.js  +page.svelte
client/src/routes/artists/[artistId]/: +page.js  +page.svelte
client/src/routes/favorites/: +page.svelte
client/src/routes/playlist/[id]/: +page.svelte
migrations/2025-02-02-164100_create_initial_tables/: down.sql  up.sql
src/: db.rs  main.rs  metadata.rs  routes.rs
src/db/: mod.rs  models.rs  schema.rs
src/routes/: api.rs  mod.rs  views.rs
src/routes/api/: mod.rs  songs.rs
src/utils/: mod.rs  static_resolver.rs
views/: index.css  index.html  index.js
