[package]
name = "loklang"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
lofty = "0.15.0"
md5 = "0.7.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
